--- a/main.html
+++ b/main.html
@@ -1,65 +1,60 @@
 <!DOCTYPE html>
 <html lang="hi">
 <head>
-    <meta charset="UTF-8">
+   <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-
-<title>StiSkilli App – Download from Google Play</title>
-
+<title>StiSkilli App – Government & Private Jobs, Exams & Notifications India</title>
 <!-- =========================
-     FORCE APP REDIRECT (INSTANT)
-========================== -->
-<meta http-equiv="refresh" content="0; url=https://play.google.com/store/apps/details?id=com.ai.skillaura">
-
-<script>
-  window.location.replace("https://play.google.com/store/apps/details?id=com.ai.skillaura");
-</script>
-
-<!-- =========================
-     CANONICAL (APP ONLY)
+     CANONICAL → PLAY STORE
 ========================== -->
 <link rel="canonical" href="https://play.google.com/store/apps/details?id=com.ai.skillaura">
-
 <!-- =========================
-     ROBOTS – PAGE SEO DISABLED
+     ROBOTS – SEO ENABLED
 ========================== -->
-<meta name="robots" content="noindex, follow">
-<meta name="googlebot" content="noindex, follow">
-
+<meta name="robots" content="index, follow">
+<meta name="googlebot" content="index, follow">
 <!-- =========================
-     APP-FOCUSED META
+     META DESCRIPTION (SEO)
+========================== -->
+<meta name="description" content="StiSkilli Android App provides latest Government Jobs, Private Jobs, Exam Notifications, Admit Cards, Results, 
+    Syllabus, Answer Keys and Career Guidance in India. Download the StiSkilli App from Google Play for daily job and exam updates.">
+<!-- =========================
+     META KEYWORDS (ALL GOVT JOB TYPES)
+========================== -->
+<meta name="keywords" content="government jobs india, sarkari naukri, central government jobs, state government jobs, latest govt jobs, 
+    govt job notification, ssc jobs, upsc jobs, bank jobs, railway jobs, defence jobs, army jobs, navy jobs, air force jobs, police jobs,
+    teaching jobs, govt teacher jobs, psu jobs, public sector jobs, medical govt jobs, engineering govt jobs, court jobs, postal jobs, india post jobs, 
+    anganwadi jobs, group c jobs, group d jobs, exam notifications, admit card, exam results, syllabus">
+<!-- =========================
+     BASIC APP META
 ========================== -->
 <meta name="application-name" content="StiSkilli">
 <meta name="theme-color" content="#F4C430">
 <meta name="mobile-web-app-capable" content="yes">
-
 <!-- =========================
-     OPEN GRAPH (APP ONLY)
+     OPEN GRAPH (SOCIAL)
 ========================== -->
 <meta property="og:type" content="website">
-<meta property="og:title" content="StiSkilli App – Smart Career & Exam Guide">
-<meta property="og:description" content="Download StiSkilli App for Government Exams, AI Tools, Job Alerts & Career Guidance.">
+<meta property="og:title" content="StiSkilli App – Government & Private Jobs India">
+<meta property="og:description" content="Government Jobs, Private Jobs, Exam Notifications, Admit Cards, Results and Syllabus in one app. Download StiSkilli from Google Play.">
 <meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura">
 <meta property="og:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
 <meta property="og:site_name" content="StiSkilli">
-
 <!-- =========================
      TWITTER / X
 ========================== -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="StiSkilli App">
-<meta name="twitter:description" content="AI Powered Career & Exam Guidance App. Download Now.">
+<meta name="twitter:description" content="Government & Private Jobs, Exams, Results and Notifications App in India.">
 <meta name="twitter:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
-
 <!-- =========================
      ANDROID APP INDEXING
 ========================== -->
 <link rel="alternate"
 href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id=com.ai.skillaura">
-
 <!-- =========================
-     STRUCTURED DATA (APP ONLY)
+     STRUCTURED DATA – MOBILE APPLICATION
 ========================== -->
 <script type="application/ld+json">
 {
@@ -78,16 +73,14 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
 </script>
 
 <!-- =========================
-     SOCIAL PROFILES (SEO SIGNAL)
+     SOCIAL PROFILES
 ========================== -->
 <link rel="me" href="https://www.facebook.com/stiworldofficial/">
-<link rel="me" href="https://www.instagram.com/stiworldofficial?igsh=MXJhaGJtcXJmM2Fydg==">
-
+<link rel="me" href="https://www.instagram.com/stiworldofficial">
 <!-- =========================
      FAVICON
 ========================== -->
 <link rel="icon" type="image/png" href="https://play-lh.googleusercontent.com/your-app-icon.png">
-
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;600;700;800;900&family=Plus+Jakarta+Sans:wght@500;600;700;800&display=swap" rel="stylesheet">
