--- a/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
+++ b/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
@@ -2,116 +2,48 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <!-- =========================
-     PRIMARY SEO (UPSC)
-========================== -->
-<title>UPSC Exam Preparation App 2026 – IAS, IPS, IFS | StiSkilli</title>
-
-<script src="/app-redirect.js"></script>
-
-<meta name="description" content="Prepare for UPSC Civil Services Exam 2026 with StiSkilli App. Complete IAS, IPS, IFS preparation including Prelims, Mains, Optional Subjects, Current Affairs, NCERT Notes and AI-powered guidance. Download StiSkilli App now.">
-
-<meta name="keywords" content="UPSC preparation app, IAS exam app, IPS exam preparation, IFS exam app, UPSC prelims mains app, Civil Services Exam 2026, UPSC current affairs app, NCERT UPSC app, UPSC study app India">
-
-<meta name="author" content="StiSkilli">
-<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-<meta name="googlebot" content="index, follow">
-
-<!-- VIEWPORT -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-
-<!-- =========================
-     CANONICAL (APP ONLY)
-========================== -->
+<title>StiSkilli App – UPSC Civil Services (IAS, IPS, IFS) & 24 Group A/B Services</title>
 <link rel="canonical" href="https://play.google.com/store/apps/details?id=com.ai.skillaura">
-
-<!-- =========================
-     OPEN GRAPH (UPSC)
-========================== -->
-<meta property="og:type" content="website">
-<meta property="og:title" content="UPSC Exam Preparation App – IAS, IPS, IFS | StiSkilli">
-<meta property="og:description" content="One app for complete UPSC preparation – Prelims, Mains, Optional Subjects, Current Affairs and AI guidance. Download StiSkilli from Google Play Store.">
-<meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura">
-<meta property="og:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
-<meta property="og:site_name" content="StiSkilli">
-    <!-- =========================
-     FACEBOOK OPEN GRAPH
-========================== -->
-<meta property="og:type" content="website">
-<meta property="og:title" content="UPSC CAPF AC Preparation App – Assistant Commandant | StiSkilli">
-<meta property="og:description" content="One app for complete UPSC CAPF preparation – Written Exam, Physical Test, Interview, Previous Year Questions, Strategy and Officer Career Path. Download StiSkilli App now.">
-<meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura">
-<meta property="og:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
-<meta property="og:site_name" content="StiSkilli">
-
-<!-- FACEBOOK PAGE / APP -->
-<meta property="fb:app_id" content="YOUR_FACEBOOK_APP_ID">
-<meta property="article:author" content="https://www.facebook.com/YOUR_FB_PAGE_NAME">
-
-<!-- =========================
-     INSTAGRAM META
-========================== -->
-<meta name="instagram:site" content="https://www.instagram.com/stiworld01?igsh=MThwbW9sMjRnejl2cg%3D%3D&utm_source=qr">
-<meta name="instagram:creator" content="">
-<!-- ========================= 
-
-<!-- =========================
-     TWITTER / X SEO
-========================== -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="UPSC Exam Preparation App 2026 | StiSkilli">
-<meta name="twitter:description" content="IAS, IPS, IFS and Civil Services Exam preparation with AI-powered education. Download StiSkilli UPSC App now.">
-<meta name="twitter:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
-
-<!-- =========================
-     APP DEEP LINK SEO
-========================== -->
+<meta name="robots" content="index, follow">
+<meta name="googlebot" content="index, follow">
+<meta name="description" content="StiSkilli Android App tracks all 24 UPSC Civil Services including IAS, IPS, IFS, IRS & Railway Services. Get latest Exam Notifications, Admit Cards, Results, Syllabus and Answer Keys for UPSC CSE Group A & B Exams.">
+<meta name="keywords" content="upsc, civil services exam, cse, ias, ips, ifs, indian administrative service, indian police service, indian foreign service, irs, indian revenue service, ia&as, idas,
+    ides, iis, iofs, ipos, indian postal service, danics, danips, armed forces hq civil service, pondicherry civil service, upsc notification, upsc syllabus, upsc result, group a services, group b services">
 <meta name="application-name" content="StiSkilli">
+<meta name="theme-color" content="#F4C430">
 <meta name="mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="theme-color" content="#1E3A8A">
-
-<!-- ANDROID APP INDEXING -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="StiSkilli App – UPSC Civil Services (IAS, IPS, IFS) & All 24 Services">
+<meta property="og:description" content="Track all 24 UPSC Civil Services (IAS, IPS, IFS, IRS). Get Exam Notifications, Admit Cards, Results and Syllabus in one app. Download StiSkilli now.">
+<meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura">
+<meta property="og:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
+<meta property="og:site_name" content="StiSkilli">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="StiSkilli App – UPSC Civil Services">
+<meta name="twitter:description" content="Latest updates for IAS, IPS, IFS, IRS and all 24 UPSC Group A & B Services.">
+<meta name="twitter:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
 <link rel="alternate"
-      href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id=com.ai.skillaura">
-
-<!-- =========================
-     STRUCTURED DATA (UPSC APP)
-========================== -->
+href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id=com.ai.skillaura">
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "MobileApplication",
-  "name": "StiSkilli UPSC Preparation App",
+  "name": "StiSkilli",
   "operatingSystem": "Android",
   "applicationCategory": "EducationApplication",
-  "description": "StiSkilli is an AI-powered UPSC exam preparation app that covers Prelims, Mains, Optional Subjects, NCERT and Current Affairs for IAS, IPS, IFS aspirants.",
+  "url": "https://play.google.com/store/apps/details?id=com.ai.skillaura",
   "offers": {
     "@type": "Offer",
     "price": "0",
     "priceCurrency": "INR"
-  },
-  "aggregateRating": {
-    "@type": "AggregateRating",
-    "ratingValue": "",
-    "ratingCount": ""
-  },
-  "url": "https://play.google.com/store/apps/details?id=com.ai.skillaura"
+  }
 }
 </script>
-
-<!-- =========================
-     PERFORMANCE
-========================== -->
-<meta name="referrer" content="strict-origin-when-cross-origin">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="format-detection" content="telephone=no">
-
-<!-- =========================
-     FAVICON
-========================== -->
-<link rel="icon" href="https://play-lh.googleusercontent.com/your-app-icon.png" type="image/png">
+<link rel="me" href="https://www.facebook.com/stiworldofficial/">
+<link rel="me" href="https://www.instagram.com/stiworldofficial">
+<link rel="icon" type="image/png" href="https://play-lh.googleusercontent.com/your-app-icon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
