--- a/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps-hindi.html
+++ b/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps-hindi.html
@@ -2,121 +2,53 @@
 <html lang="hi">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <!-- =========================
-     PRIMARY SEO (UPSC)
-========================== -->
-<title>UPSC परीक्षा तैयारी ऐप 2026 – IAS, IPS, IFS | StiSkilli</title>
-
-<script src="/app-redirect.js"></script>
-
-<meta name="description" content="StiSkilli ऐप के साथ UPSC सिविल सेवा परीक्षा 2026 की तैयारी करें। प्रीलिम्स, मेन्स, वैकल्पिक विषय, करंट अफेयर्स, NCERT नोट्स और AI-संचालित मार्गदर्शन सहित पूर्ण IAS, IPS, IFS तैयारी। StiSkilli ऐप अभी डाउनलोड करें।">
-
-<meta name="keywords" content="UPSC तैयारी ऐप, IAS परीक्षा ऐप, IPS परीक्षा तैयारी, IFS परीक्षा ऐप, UPSC प्रीलिम्स मेन्स ऐप, सिविल सेवा परीक्षा 2026, UPSC करंट अफेयर्स ऐप, NCERT UPSC ऐप, UPSC अध्ययन ऐप भारत">
-
-<meta name="author" content="StiSkilli">
-<meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-<meta name="googlebot" content="index, follow">
-
-<!-- VIEWPORT -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-
-<!-- =========================
-     CANONICAL (APP ONLY)
-========================== -->
+<title>StiSkilli App – UPSC Civil Services (IAS, IPS) & 24 Services - यूपीएससी तैयारी</title>
 <link rel="canonical" href="https://play.google.com/store/apps/details?id=com.ai.skillaura">
-
-<!-- =========================
-     OPEN GRAPH (UPSC)
-========================== -->
-<meta property="og:type" content="website">
-<meta property="og:title" content="UPSC परीक्षा तैयारी ऐप – IAS, IPS, IFS | StiSkilli">
-<meta property="og:description" content="पूर्ण UPSC तैयारी के लिए एक ऐप – प्रीलिम्स, मेन्स, वैकल्पिक विषय, करंट अफेयर्स और AI मार्गदर्शन। Google Play Store से StiSkilli डाउनलोड करें।">
-<meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura">
-<meta property="og:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
-<meta property="og:site_name" content="StiSkilli">
-    <!-- =========================
-     FACEBOOK OPEN GRAPH
-========================== -->
-<meta property="og:type" content="website">
-<meta property="og:title" content="UPSC CAPF AC तैयारी ऐप – सहायक कमांडेंट | StiSkilli">
-<meta property="og:description" content="पूर्ण UPSC CAPF तैयारी के लिए एक ऐप – लिखित परीक्षा, शारीरिक परीक्षण, साक्षात्कार, पिछले वर्ष के प्रश्न, रणनीति और अधिकारी कैरियर पथ। StiSkilli ऐप अभी डाउनलोड करें।">
-<meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura">
-<meta property="og:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
-<meta property="og:site_name" content="StiSkilli">
-
-<!-- FACEBOOK PAGE / APP -->
-<meta property="fb:app_id" content="YOUR_FACEBOOK_APP_ID">
-<meta property="article:author" content="https://www.facebook.com/YOUR_FB_PAGE_NAME">
-
-<!-- =========================
-     INSTAGRAM META
-========================== -->
-<meta name="instagram:site" content="https://www.instagram.com/stiworld01?igsh=MThwbW9sMjRnejl2cg%3D%3D&utm_source=qr">
-<meta name="instagram:creator" content="">
-<!-- ========================= 
-
-<!-- =========================
-     TWITTER / X SEO
-========================== -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="UPSC परीक्षा तैयारी ऐप 2026 | StiSkilli">
-<meta name="twitter:description" content="AI-संचालित शिक्षा के साथ IAS, IPS, IFS और सिविल सेवा परीक्षा तैयारी। StiSkilli UPSC ऐप अभी डाउनलोड करें।">
-<meta name="twitter:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
-
-<!-- =========================
-     APP DEEP LINK SEO
-========================== -->
+<meta name="robots" content="index, follow">
+<meta name="googlebot" content="index, follow">
+<meta name="description" content="StiSkilli App पर पाएं UPSC की सभी 24 सिविल सेवाओं (IAS, IPS, IFS, IRS) की जानकारी। नोटिफिकेशन, एडमिट कार्ड, सिलेबस, रिजल्ट और Answer Keys हिंदी और अंग्रेजी में देखें। Best App for UPSC CSE preparation.">
+<meta name="keywords" content="upsc, upsc hindi, civil services exam, cse, ias, ips, ifs, irs, upsc syllabus in hindi, upsc notification, upsc result,
+    यूपीएससी, सिविल सेवा परीक्षा, आईएएस, आईपीएस, आईएफएस, आईआरएस, सरकारी नौकरी, यूपीएससी सिलेबस, यूपीएससी रिजल्ट, ias syllabus hindi, upsc exam date, group a services, group b services">
 <meta name="application-name" content="StiSkilli">
+<meta name="theme-color" content="#F4C430">
 <meta name="mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="theme-color" content="#1E3A8A">
-
-<!-- ANDROID APP INDEXING -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="StiSkilli App – UPSC Exam (IAS, IPS) & 24 Services - यूपीएससी">
+<meta property="og:description" content="UPSC की सभी 24 सेवाओं (IAS, IPS, IFS, IRS) के नोटिफिकेशन, सिलेबस और रिजल्ट एक ही ऐप में। Download StiSkilli now for UPSC updates.">
+<meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura">
+<meta property="og:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
+<meta property="og:site_name" content="StiSkilli">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="StiSkilli App – UPSC Civil Services (IAS, IPS)">
+<meta name="twitter:description" content="IAS, IPS, IFS और UPSC की अन्य 24 सेवाओं के लिए लेटेस्ट अपडेट्स और नोटिफिकेशन।">
+<meta name="twitter:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
 <link rel="alternate"
-      href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id=com.ai.skillaura">
+href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id=com.ai.skillaura">
 
-<!-- =========================
-     STRUCTURED DATA (UPSC APP)
-========================== -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "MobileApplication",
-  "name": "StiSkilli UPSC तैयारी ऐप",
+  "name": "StiSkilli",
   "operatingSystem": "Android",
   "applicationCategory": "EducationApplication",
-  "description": "StiSkilli एक AI-संचालित UPSC परीक्षा तैयारी ऐप है जो IAS, IPS, IFS उम्मीदवारों के लिए प्रीलिम्स, मेन्स, वैकल्पिक विषय, NCERT और करंट अफेयर्स को कवर करता है।",
+  "url": "https://play.google.com/store/apps/details?id=com.ai.skillaura",
   "offers": {
     "@type": "Offer",
     "price": "0",
     "priceCurrency": "INR"
-  },
-  "aggregateRating": {
-    "@type": "AggregateRating",
-    "ratingValue": "",
-    "ratingCount": ""
-  },
-  "url": "https://play.google.com/store/apps/details?id=com.ai.skillaura"
+  }
 }
 </script>
-
-<!-- =========================
-     PERFORMANCE
-========================== -->
-<meta name="referrer" content="strict-origin-when-cross-origin">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="format-detection" content="telephone=no">
-
-<!-- =========================
-     FAVICON
-========================== -->
-<link rel="icon" href="https://play-lh.googleusercontent.com/your-app-icon.png" type="image/png">
+<link rel="me" href="https://www.facebook.com/stiworldofficial/">
+<link rel="me" href="https://www.instagram.com/stiworldofficial">
+<link rel="icon" type="image/png" href="https://play-lh.googleusercontent.com/your-app-icon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;600;700;800&family=Plus+Jakarta+Sans:wght@400;600;700;800&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    
     <!-- QUIZ DATA (External File) -->
     <script src="currentaffairsquizdatahindi.js"></script>
     
