--- a/main.html
+++ b/main.html
@@ -375,11 +375,10 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
             <p class="popup-p">Select Language / भाषा चुनें</p>
             
             <a id="link-hi" href="#" class="lang-btn btn-hindi">
-                <span><i class="fas fa-om"></i> HINDI (हिंदी)</span> <i class="fas fa-chevron-right"></i>
-            </a>
-            
+                <span><i class=""></i> HINDI (हिंदी)</span> <i class=""></i>
+            </a> 
             <a id="link-en" href="#" class="lang-btn btn-eng">
-                <span><i class="fas fa-globe"></i> ENGLISH</span> <i class="fas fa-chevron-right"></i>
+                <span><i class=""></i> ENGLISH</span> <i class=""></i>
             </a>
         </div>
     </div>
