--- a/main.html
+++ b/main.html
@@ -399,7 +399,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
     title: "CSE",
     sub: "Civil Services",
     tag: "Grade A",
-    img: "upsc.png",
+    img: "upsc.webp",
     linkHi: "upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps-hindi.html",
     linkEn: "upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html"
   },
@@ -407,7 +407,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
     title: "ESE",
     sub: "Engineering Services",
     tag: "Technical",
-    img: "upsc.png",
+    img: "upsc.webp",
     linkHi: "#upsc-ese-ies-engineering-services-exam.html",
     linkEn: "upsc-ese-ies-engineering-services-exam.html"
   },
@@ -415,7 +415,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
     title: "IFoS",
     sub: "Forest Service",
     tag: "Grade A",
-    img: "upsc.png",
+    img: "upsc.webp",
     linkHi: "#upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html",
     linkEn: "upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html"
   },
@@ -423,7 +423,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
     title: "CDS",
     sub: "Defence Services",
     tag: "Defence",
-    img: "upsc.png",
+    img: "upsc.webp",
     linkHi: "#ups-cds-combined-defence-dervices.html",
     linkEn: "#ups-cds-combined-defence-dervices.html"
   },
@@ -431,7 +431,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
     title: "NDA/NA",
     sub: "Defence Academy",
     tag: "Defence",
-    img: "upsc.png",
+    img: "upsc.webp",
     linkHi: "#upsc-nda-na-services.html",
     linkEn: "#upsc-nda-na-services.html"
   },
@@ -439,7 +439,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
     title: "CMS",
     sub: "Medical Services",
     tag: "Medical",
-    img: "upsc.png",
+    img: "upsc.webp",
     linkHi: "#upsc-cms-services.html",
     linkEn: "#upsc-cms-services.html"
   },
@@ -447,7 +447,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
     title: "IES/ISS",
     sub: "Eco & Stats",
     tag: "Specialist",
-    img: "upsc.png",
+    img: "upsc.webp",
     linkHi: "#upsc-ies-iss-services.html",
     linkEn: "#upsc-ies-iss-services.html"
   },
@@ -455,7 +455,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
     title: "CAPF",
     sub: "Armed Police",
     tag: "Paramilitary",
-    img: "upsc.png",
+    img: "upsc.webp",
     linkHi: "#upsc-capf-services.html",
     linkEn: "#upsc-capf-services.html"
   },
@@ -463,7 +463,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
     title: "CGSE",
     sub: "Geo Scientist",
     tag: "Science",
-    img: "upsc.png",
+    img: "upsc.webp",
     linkHi: "#upsc-cgs-services.html",
     linkEn: "#upsc-cgs-services.html"
   },
@@ -471,7 +471,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
     title: "EPFO",
     sub: "EO / AO",
     tag: "Group A/B",
-    img: "upsc.png",
+    img: "upsc.webp",
     linkHi: "#upsc-epfo-eo-oa-services.html",
     linkEn: "#upsc-epfo-eo-oa-services.html"
   },
@@ -479,7 +479,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
     title: "CISF AC",
     sub: "Dept. Exam",
     tag: "Departmental",
-    img: "upsc.png",
+    img: "upsc.webp",
     linkHi: "#upsc-cisf-acexe-ldce-service.html",
     linkEn: "#upsc-cisf-acexe-ldce-service.html"
   },
@@ -487,7 +487,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
     title: "SO/Steno",
     sub: "Secretariat",
     tag: "Departmental",
-    img: "upsc.png",
+    img: "upsc.webp",
     linkHi: "#upsc-so-steno-grade-b-grade-i-ldce-services.html",
     linkEn: "#upsc-so-steno-grade-b-grade-i-ldce-services.html"
   },
@@ -495,7 +495,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
     title: "CBI DSP",
     sub: "Investigation",
     tag: "Departmental",
-    img: "upsc.png",
+    img: "upsc.webp",
     linkHi: "#upsc-cbi-dsp-limited-dept-service.html",
     linkEn: "#upsc-cbi-dsp-limited-dept-service.html"
   },
@@ -503,7 +503,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
     title: "SCRA",
     sub: "Railway Engg.",
     tag: "Technical",
-    img: "upsc.png",
+    img: "upsc.webp",
     linkHi: "#upsc-special-class-railway-apprentice-scra-services.html",
     linkEn: "#upsc-special-class-railway-apprentice-scra-services.html"
   }
