--- a/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
+++ b/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
@@ -1005,7 +1005,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
                 <div class="icon-box"><i class="fas fa-user-circle"></i></div><span></span>
             </div>
             <div class="nav-item locked" id="nav-pyq" onclick="activateTab(this, 'pyq')">
-                <div class="icon-box"><i class="fas fa-file-alt"></i></div><span></span>
+                <div class="icon-box"><i class="fas fa-file-alt"></i></div><span>START</span>
             </div>
             
             <div class="nav-item upsc-tab locked" id="nav-upsc" onclick="activateTab(this, 'upsc')">
@@ -1013,10 +1013,10 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
             </div>
             
             <div class="nav-item locked" id="nav-quiz" onclick="activateTab(this, 'quiz')">
-                <div class="icon-box"><i class="fas fa-brain"></i></div><span></span>
+                <div class="icon-box"><i class="fas fa-brain"></i></div><span>CURRENT</span>
             </div>
             <div class="nav-item locked" id="nav-news" onclick="activateTab(this, 'news')">
-                <div class="icon-box"><i class="fas fa-newspaper"></i></div><span></span>
+                <div class="icon-box"><i class="fas fa-newspaper"></i></div><span>LATEST</span>
             </div>
         </nav>
     </div>
