--- a/history-pyqs-gspluscsat-hindi.html
+++ b/history-pyqs-gspluscsat-hindi.html
@@ -748,9 +748,9 @@
         const STATIC_HEADER_TEXT = "PYQ";
 
         const categoryBackgrounds = {
-           profile: 'skilligovtbck.png', ancient: 'anicianthistoryofindia.png', medieval: 'medivalhistoryofindia.png',
-            modern: 'modernhistoryofindia.png', world: 'worldhistory.png', art: 'artandcultureofindia.png',
-            news: 'skillinewsbck.png' 
+           profile: 'skilligovtbck.webp', ancient: 'anicianthistoryofindia.webp', medieval: 'medivalhistoryofindia.webp',
+            modern: 'modernhistoryofindia.webp', world: 'worldhistory.webp', art: 'artandcultureofindia.webp',
+            news: 'skillinewsbck.webp' 
         };
 
         const CHECKPOINT = 25;
