--- a/economics-pyqs-gspluscsat-english.html
+++ b/economics-pyqs-gspluscsat-english.html
@@ -749,9 +749,9 @@
         const STATIC_HEADER_TEXT = "PYQ";
 
         const categoryBackgrounds = {
-           profile: 'economist.png', ancient: 'economist.png', medieval: 'economist.png',
-            modern: 'economist.png', world: 'economist.png', art: 'economist.png',
-            news: 'skillinewsbck.png' 
+           profile: 'economist.webp', ancient: 'economist.webp', medieval: 'economist.webp',
+            modern: 'economist.webp', world: 'economist.webp', art: 'economist.webp',
+            news: 'skillinewsbck.webp' 
         };
 
         const CHECKPOINT = 25;
