--- a/indian-polity-pyqs-gspluscsat-hindi.html
+++ b/indian-polity-pyqs-gspluscsat-hindi.html
@@ -748,9 +748,9 @@
         const STATIC_HEADER_TEXT = "पीवाईक्यू";
 
         const categoryBackgrounds = {
-            profile: 'indianpolity.png', ancient: 'indianpolity.png', medieval: 'indianpolity.png',
-            modern: 'indianpolity.png', world: 'indianpolity.png', art: 'indianpolity.png',
-            news: 'skillinewsbck.png' 
+            profile: 'indianpolity.webp', ancient: 'indianpolity.webp', medieval: 'indianpolity.webp',
+            modern: 'indianpolity.webp', world: 'indianpolity.webp', art: 'indianpolity.webp',
+            news: 'skillinewsbck.webp' 
         };
 
         const CHECKPOINT = 25;
