--- a/indian-polity-pyqs-gspluscsat-english.html
+++ b/indian-polity-pyqs-gspluscsat-english.html
@@ -749,9 +749,9 @@
         const STATIC_HEADER_TEXT = "PYQ";
 
         const categoryBackgrounds = {
-            profile: 'indianpolity.png', ancient: 'indianpolity.png', medieval: 'indianpolity.png',
-            modern: 'indianpolity.png', world: 'indianpolity.png', art: 'indianpolity.png',
-            news: 'skillinewsbck.png' 
+            profile: 'indianpolity.webp', ancient: 'indianpolity.webp', medieval: 'indianpolity.webp',
+            modern: 'indianpolity.webp', world: 'indianpolity.webp', art: 'indianpolity.webp',
+            news: 'skillinewsbck.webp' 
         };
 
         const CHECKPOINT = 25;
