--- a/main.html
+++ b/main.html
@@ -385,11 +385,11 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
 
     <script>
         const categoryBackgrounds = {
-            govt: 'skilligovtbck.png',
-            private: 'skillipvtbck.png',
-            ai: 'skilliaibck.png',
-            trending: 'skillirequirebck.png',
-            news: 'skillinewsbck.png'
+            govt: 'skilligovtbck.webp',
+            private: 'skillipvtbck.webp',
+            ai: 'skilliaibck.webp',
+            trending: 'skillirequirebck.webp',
+            news: 'skillinewsbck.webp'
         };
 
         const dataBase = {
