--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <body>
 
     <!-- 1. HD Image Background (Same as STISoul) -->
-    <img id="bg-image" src="skilliaibck.webp" alt="">
+    <img id="bg-image" src="skilligovtbck.webp" alt="">
     
     <div class="image-overlay"></div>
 
