--- a/history-pyqs-gspluscsat-hindi.html
+++ b/history-pyqs-gspluscsat-hindi.html
@@ -748,8 +748,8 @@
         const STATIC_HEADER_TEXT = "PYQ";
 
         const categoryBackgrounds = {
-           profile: 'skilligovtbck.webp', ancient: 'anicianthistoryofindia.webp', medieval: 'medivalhistoryofindia.webp',
-            modern: 'modernhistoryofindia.webp', world: 'worldhistory.webp', art: 'artandcultureofindia.webp',
+           profile: 'history.webp', ancient: 'history.webp', medieval: 'history.webp',
+            modern: 'history.webp', world: 'history.webp', art: 'history.webp',
             news: 'skillinewsbck.webp' 
         };
 
