--- a/history-subjectwise-all-pyg-syllabus-subject-chaperwise-hindi.html
+++ b/history-subjectwise-all-pyg-syllabus-subject-chaperwise-hindi.html
@@ -664,8 +664,8 @@
         const CATEGORY_ORDER = ['ancient', 'medieval', 'modern', 'world', 'art'];
 
         const categoryBackgrounds = {
-            profile: 'skilligovtbck.png', ancient: 'anicianthistoryofindia.png', medieval: 'medivalhistoryofindia.png',
-            modern: 'modernhistoryofindia.png', world: 'worldhistory.png', art: 'artandcultureofindia.png',
+            profile: 'history.webp', ancient: 'history.webp', medieval: 'history.webp',
+            modern: 'history.webp', world: 'history.webp', art: 'history.webp',
             news: 'skillinewsbck.png' 
         };
 
