--- a/history-pyqs-gspluscsat-english.html
+++ b/history-pyqs-gspluscsat-english.html
@@ -17,6 +17,9 @@
 <meta name="application-name" content="StiSkilli">
 <meta name="theme-color" content="#F4C430">
 <meta name="mobile-web-app-capable" content="yes">
+<meta name="application-name" content="StiSkilli">
+<meta name="theme-color" content="#F4C430">
+<meta name="mobile-web-app-capable" content="yes">
 <!-- =========================
      OPEN GRAPH (SOCIAL)
 ========================== -->
@@ -56,6 +59,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
   }
 }
 </script>
+
 <!-- =========================
      SOCIAL PROFILES
 ========================== -->
@@ -63,18 +67,6 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
 <link rel="me" href="https://www.instagram.com/stiworldofficial">
 <!-- ========================= -->
 <script src="redirect.js?v=99"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;600;700;800;900&family=Plus+Jakarta+Sans:wght@500;600;700;800&display=swap" rel="stylesheet">
-     <!DOCTYPE html>
-<html lang="hi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>STISkilli History PYQ – Pro Sequential Edition</title>
-<script src="/app-redirect.js"></script>
-<meta name="description" content="Practice STISkilli History PYQ. Premium AI-powered preparation.">
-<meta name="robots" content="index, follow">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
