--- a/economics-pyqs-gspluscsat-hindi.html
+++ b/economics-pyqs-gspluscsat-hindi.html
@@ -14,68 +14,56 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <!-- CANONICAL (APP LINK USED) -->
 <link rel="canonical" href="https://play.google.com/store/apps/details?id=com.ai.skillaura">
+<meta name="application-name" content="StiSkilli">
+<meta name="theme-color" content="#F4C430">
+<meta name="mobile-web-app-capable" content="yes">
 <!-- =========================
-     OPEN GRAPH (SOCIAL SEO)
+     OPEN GRAPH (SOCIAL)
 ========================== -->
 <meta property="og:type" content="website">
-<meta property="og:title" content="StiSkilli – स्मार्ट करियर और परीक्षा गाइड 2026">
-<meta property="og:description" content="सरकारी परीक्षाओं, AI टूल्स, जॉब अलर्ट, शिक्षा समाचार और करियर मार्गदर्शन के लिए SkillAura AI ऐप डाउनलोड करें। एक ऐप – सभी भविष्य के समाधान।">
-<meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura&pcampaignid=web_share">
+<meta property="og:title" content="StiSkilli App – Government & Private Jobs India">
+<meta property="og:description" content="Government Jobs, Private Jobs, Exam Notifications, Admit Cards, Results and Syllabus in one app. Download StiSkilli from Google Play.">
+<meta property="og:url" content="https://play.google.com/store/apps/details?id=com.ai.skillaura">
 <meta property="og:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
 <meta property="og:site_name" content="StiSkilli">
 <!-- =========================
-     TWITTER / X SEO
+     TWITTER / X
 ========================== -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="StiSkilli – भविष्य का करियर और परीक्षा गाइड">
-<meta name="twitter:description" content="AI संचालित सरकारी परीक्षा, नौकरी और करियर गाइड ऐप। Google Play Store से SkillAura AI डाउनलोड करें।">
+<meta name="twitter:title" content="StiSkilli App">
+<meta name="twitter:description" content="Government & Private Jobs, Exams, Results and Notifications App in India.">
 <meta name="twitter:image" content="https://play-lh.googleusercontent.com/your-app-icon.png">
 <!-- =========================
-     APP DEEP LINK SEO
+     ANDROID APP INDEXING
 ========================== -->
-<meta name="application-name" content="StiSkilli">
-<meta name="mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="theme-color" content="#F4C430">
-<!-- ANDROID APP INDEXING -->
-<link rel="alternate" href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id=com.ai.skillaura">
+<link rel="alternate"
+href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id=com.ai.skillaura">
 <!-- =========================
-     STRUCTURED DATA (JSON-LD)
+     STRUCTURED DATA – MOBILE APPLICATION
 ========================== -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "MobileApplication",
-  "name": "STISkilli",
+  "name": "StiSkilli",
   "operatingSystem": "Android",
   "applicationCategory": "EducationApplication",
-  "description": "STISkilli सरकारी नौकरियों, AI टूल्स, शिक्षा, प्राइवेट नौकरियों और भारत में नवीनतम भर्ती के लिए एक स्मार्ट टेक-संचालित करियर और परीक्षा मार्गदर्शन ऐप है।",
+  "url": "https://play.google.com/store/apps/details?id=com.ai.skillaura",
   "offers": {
     "@type": "Offer",
     "price": "0",
     "priceCurrency": "INR"
-  },
-  "aggregateRating": {
-    "@type": "AggregateRating",
-    "ratingValue": "4.9",
-    "ratingCount": "100000"
-  },
-  "url": "https://play.google.com/store/apps/details?id=com.ai.skillaura"
+  }
 }
 </script>
 
 <!-- =========================
-     PERFORMANCE & AI SEARCH
+     SOCIAL PROFILES
 ========================== -->
-<meta name="referrer" content="strict-origin-when-cross-origin">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="format-detection" content="telephone=no">
-
-<!-- =========================
-     FAVICON
-========================== -->
-<link rel="icon" href="https://play-lh.googleusercontent.com/your-app-icon.png" type="image/png">
-
+<link rel="me" href="https://www.facebook.com/stiworldofficial/">
+<link rel="me" href="https://www.instagram.com/stiworldofficial">
+<!-- ========================= -->
+<script src="redirect.js?v=99"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;600;700;800;900&family=Plus+Jakarta+Sans:wght@500;600;700;800&display=swap" rel="stylesheet">
