--- a/economics-pyqs-gspluscsat-hindi.html
+++ b/economics-pyqs-gspluscsat-hindi.html
@@ -17,6 +17,9 @@
 <meta name="application-name" content="StiSkilli">
 <meta name="theme-color" content="#F4C430">
 <meta name="mobile-web-app-capable" content="yes">
+<meta name="application-name" content="StiSkilli">
+<meta name="theme-color" content="#F4C430">
+<meta name="mobile-web-app-capable" content="yes">
 <!-- =========================
      OPEN GRAPH (SOCIAL)
 ========================== -->
@@ -56,28 +59,13 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
   }
 }
 </script>
-
 <!-- =========================
      SOCIAL PROFILES
 ========================== -->
 <link rel="me" href="https://www.facebook.com/stiworldofficial/">
 <link rel="me" href="https://www.instagram.com/stiworldofficial">
 <!-- ========================= -->
-<script src="redirect.js?v=99"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;600;700;800;900&family=Plus+Jakarta+Sans:wght@500;600;700;800&display=swap" rel="stylesheet">
-     <!DOCTYPE html>
-<html lang="hi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>STISkilli इतिहास PYQ – प्रो अनुक्रमिक संस्करण</title>
-<script src="/app-redirect.js"></script>
-<meta name="description" content="STISkilli इतिहास PYQ का अभ्यास करें। प्रीमियम AI-संचालित तैयारी।">
-<meta name="robots" content="index, follow">
-
-    <script src="https://cdn.tailwindcss.com"></script>
+<script src="redirect.js?v=99"></script> <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500;600;700;800;900&family=Plus+Jakarta+Sans:wght@500;600;700;800&display=swap" rel="stylesheet">
     
