--- a/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
+++ b/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps.html
@@ -1002,7 +1002,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
     <div class="iphone-dock-wrapper">
         <nav class="iphone-dock">
             <div class="nav-item active" id="nav-profile" onclick="activateTab(this, 'profile')">
-                <div class="icon-box"><i class="fas fa-user-circle"></i></div><span></span>
+                <div class="icon-box"><i class="fas fa-user-circle"></i></div><span>Youtube</span>
             </div>
             <div class="nav-item locked" id="nav-pyq" onclick="activateTab(this, 'pyq')">
                 <div class="icon-box"><i class="fas fa-file-alt"></i></div><span>START</span>
