--- a/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps-hindi.html
+++ b/upsc-ias-ips-ifos-ifs-iaas-icas-icls-idas-ides-iis-ipos-iptafs-irs-income-tax-irs-customer-indirect-tax-irts-iras-irps-irsse-itrs-rpf-aghqcs-danics-danips-pcs-pps-hindi.html
@@ -1002,10 +1002,10 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
     <div class="iphone-dock-wrapper">
         <nav class="iphone-dock">
             <div class="nav-item active" id="nav-profile" onclick="activateTab(this, 'profile')">
-                <div class="icon-box"><i class="fas fa-user-circle"></i></div><span></span>
+                <div class="icon-box"><i class="fas fa-user-circle"></i></div><span>Youtube</span>
             </div>
             <div class="nav-item locked" id="nav-pyq" onclick="activateTab(this, 'pyq')">
-                <div class="icon-box"><i class="fas fa-file-alt"></i></div><span></span>
+                <div class="icon-box"><i class="fas fa-file-alt"></i></div><span>Start</span>
             </div>
             
             <div class="nav-item upsc-tab locked" id="nav-upsc" onclick="activateTab(this, 'upsc')">
@@ -1013,10 +1013,10 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
             </div>
             
             <div class="nav-item locked" id="nav-quiz" onclick="activateTab(this, 'quiz')">
-                <div class="icon-box"><i class="fas fa-brain"></i></div><span></span>
+                <div class="icon-box"><i class="fas fa-brain"></i></div><span>Current</span>
             </div>
             <div class="nav-item locked" id="nav-news" onclick="activateTab(this, 'news')">
-                <div class="icon-box"><i class="fas fa-newspaper"></i></div><span></span>
+                <div class="icon-box"><i class="fas fa-newspaper"></i></div><span>Latest</span>
             </div>
         </nav>
     </div>
