--- a/main.html
+++ b/main.html
@@ -345,11 +345,11 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
 
     <div class="dock-wrapper">
         <nav class="glass-dock golden-border-anim">
-            <div id="nav-private" class="dock-item" onclick="openCategory('private', this)"><i class="fas fa-briefcase"></i></div>
-            <div id="nav-ai" class="dock-item" onclick="openCategory('ai', this)"><i class="fas fa-robot"></i></div>
-            <div id="nav-govt" class="dock-item active" onclick="openCategory('govt', this)"><i class="fas fa-landmark"></i></div>
-            <div id="nav-trending" class="dock-item" onclick="openCategory('trending', this)"><i class="fas fa-fire"></i></div>
-            <div id="nav-news" class="dock-item" onclick="openCategory('news', this)"><i class="fas fa-newspaper"></i></div>
+            <div id="nav-private" class="dock-item" onclick="openCategory('private', this)"><i class="fas fa-briefcase">Private</i></div>
+            <div id="nav-ai" class="dock-item" onclick="openCategory('ai', this)"><i class="fas fa-robot">AiTool</i></div>
+            <div id="nav-govt" class="dock-item active" onclick="openCategory('govt', this)"><i class="fas fa-landmark"></i>Govt</div>
+            <div id="nav-trending" class="dock-item" onclick="openCategory('trending', this)"><i class="fas fa-fire"></i>Trends</div>
+            <div id="nav-news" class="dock-item" onclick="openCategory('news', this)"><i class="fas fa-newspaper"></i>Latest</div>
         </nav>
     </div>
 
