--- a/economics-pyqs-gspluscsat-english.html
+++ b/economics-pyqs-gspluscsat-english.html
@@ -585,7 +585,7 @@ href="android-app://com.ai.skillaura/https/play.google.com/store/apps/details?id
 
                     <div class="grand-btn-group">
                         <button class="grand-btn-primary" onclick="restartJourney()">START AGAIN</button>
-                        <button class="grand-btn-secondary" onclick="window.location.href='economics-pyqs-gspluscsat-english.html'">START ECONOMICS</button>
+                        <button class="grand-btn-secondary" onclick="window.location.href='geography-pyqs-gspluscsat-english.html'">START GEOGRAPHY</button>
                     </div>
                 </div>
             </div>
